# autoresearch-midi

./: .gitignore  AGENTS.md  EXPERIMENTS.md  JOURNAL.md  README.md  analysis.ipynb  analyze_midi.py  constants.py  download_hf_midi.py  generate.py  prepare.py  program.md  pyproject.toml  spawn.sh  train.py
docs/plans/: 2026-03-26-midi-generation-design.md  2026-03-27-music-quality-experiments-design.md
runs/run_001/: config.json
runs/run_002/: config.json
runs/run_003/: config.json
runs/run_004/: config.json
runs/run_005/: config.json
runs/run_006/: config.json
runs/run_007/: config.json
runs/run_008/: config.json
runs/run_009/: config.json
runs/run_010/: config.json
runs/run_011/: config.json
runs/run_012/: config.json
runs/run_013/: config.json
runs/run_014/: config.json
runs/run_015/: config.json
runs/run_016/: config.json
runs/run_017/: config.json
runs/run_018/: config.json
runs/run_019/: config.json
runs/run_020/: config.json
runs/run_021/: config.json
runs/run_022/: config.json
